--- a/index.html
+++ b/index.html
@@ -17,68 +17,118 @@
             flex-direction: column;
             height: 100vh;
             text-align: center;
+            position: relative; /* Added */
         }
 
         .container {
             max-width: 600px;
+            z-index: 1; /* Ensure the content is above the slideshow */
         }
 
-        h1 {
-            color: #d9534f;
-        }
-
-        p {
-            margin-top: 10px;
-        }
-
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-top: 20px;
-        }
-
-        /* Menu Section Styling */
-        .menu-section {
-            margin-top: 40px;
-        }
-
-        .menu-item {
-            margin-top: 20px;
-        }
-
-        /* Image Gallery Styling */
-        .image-gallery {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .gallery-item {
-            flex: 0 0 30%;
-            margin: 5px;
+        .slideshow-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 0; /* Behind the content */
             overflow: hidden;
         }
 
-        .gallery-item img {
+        .mySlides {
+            display: none;
             width: 100%;
-            height: auto;
+            height: 100%;
             border-radius: 5px;
-            transition: transform 0.3s ease-in-out;
         }
 
-        .gallery-item img:hover {
-            transform: scale(1.1);
+        .mySlides img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Ensure images cover the entire container */
+        }
+
+        /* Navigation Dots Styles */
+        .dot-container {
+            text-align: center;
+            margin-top: 10px;
+        }
+
+        .dot {
+            height: 15px;
+            width: 15px;
+            margin: 0 2px;
+            background-color: #bbb;
+            border-radius: 50%;
+            display: inline-block;
+            transition: background-color 0.6s ease;
+        }
+
+        .active {
+            background-color: #717171;
         }
     </style>
 </head>
 <body>
+    <!-- Slideshow Container -->
+    <div class="slideshow-container">
+        <div class="mySlides">
+            <img src="Asset1.jpg" alt="Slide 1">
+        </div>
+        <div class="mySlides">
+            <img src="Asset2.jpg" alt="Slide 2">
+        </div>
+        <!-- Add more slides as needed -->
+
+        <!-- Navigation Dots -->
+        <div class="dot-container">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <!-- Add more dots corresponding to slides -->
+        </div>
+    </div>
+
+    <!-- Content Container -->
     <div class="container">
         <img src="Asset 2.webp" alt="Under Construction" width="150">
         <h1>Under Construction</h1>
         <p> Our website and restaurant are currently under construction.</p>
         <p>Stay tuned for updates and our grand opening!</p>
         <p>Contact us at abs@jollourf.com </p>
-        <p> 443-972-0672</p>
+        <p>443-972-0672</p>
     </div>
+
+    <!-- Slideshow Script (unchanged) -->
+    <script>
+        var slideIndex = 0;
+
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+
+            slideIndex++;
+
+            if (slideIndex > slides.length) {
+                slideIndex = 1;
+            }
+
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+
+            setTimeout(showSlides, 2000); // Change slide every 2 seconds
+        }
+
+        // Initial call to start the slideshow
+        showSlides();
+    </script>
 </body>
 </html>
