--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         .container {
             max-width: 600px;
             z-index: 1; /* Ensure the content is above the slideshow */
+            background-color: rgba(125, 130, 125, 0.7); /* Semi-transparent white background */
+            padding: 20px;
+            border-radius: 10px;
         }
 
         .slideshow-container {
@@ -73,10 +76,10 @@
     <!-- Slideshow Container -->
     <div class="slideshow-container">
         <div class="mySlides">
-            <img src="Asset1.jpg" alt="Slide 1">
+            <img src="Asset 2.webp" alt="Slide 1">
         </div>
         <div class="mySlides">
-            <img src="Asset2.jpg" alt="Slide 2">
+            <img src="foodimage1.jpg" alt="Slide 2">
         </div>
         <!-- Add more slides as needed -->
 
@@ -124,7 +127,7 @@
             slides[slideIndex - 1].style.display = "block";
             dots[slideIndex - 1].className += " active";
 
-            setTimeout(showSlides, 2000); // Change slide every 2 seconds
+            setTimeout(showSlides, 5000); // Change slide every 2 seconds
         }
 
         // Initial call to start the slideshow
