change h1 and p color

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
         .active {
             background-color: #717171;
         }
+        h1 {
+        color: #b31515
+        }
+
+        p {
+        color:#000000
+        }
     </style>
 </head>
 <body>
