--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         .container {
             max-width: 600px;
             z-index: 1; /* Ensure the content is above the slideshow */
-            background-color: rgba(125, 130, 125, 0.7); /* Semi-transparent white background */
+            background-color: rgba(140, 140, 140, 0.9); /* Semi-transparent white background */
             padding: 20px;
             border-radius: 10px;
         }
@@ -83,10 +83,22 @@
     <!-- Slideshow Container -->
     <div class="slideshow-container">
         <div class="mySlides">
-            <img src="Asset 2.webp" alt="Slide 1">
+            <img src="slideshow-images/20231225_221954.jpg" alt="Slide 1">
         </div>
         <div class="mySlides">
-            <img src="foodimage1.jpg" alt="Slide 2">
+            <img src="slideshow-images/20240214_211308.jpg" alt="Slide 2">
+        </div>
+        <div class="mySlides">
+            <img src="slideshow-images/20240214_211938.jpg" alt="Slide 3">
+        </div>
+        <div class="mySlides">
+            <img src="slideshow-images/image.png" alt="Slide 4">
+        </div>
+        <div class="mySlides">
+            <img src="slideshow-images/image (1).png" alt="Slide 5">
+        </div>
+        <div class="mySlides">
+            <img src="slideshow-images/image (2).png" alt="Slide 6">
         </div>
         <!-- Add more slides as needed -->
 
@@ -94,6 +106,11 @@
         <div class="dot-container">
             <span class="dot"></span>
             <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+
             <!-- Add more dots corresponding to slides -->
         </div>
     </div>
