--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <!-- Content Container -->
     <div class="container">
         <img src="Asset 2.webp" alt="Under Construction" width="150">
-        <h1>Under Construction</h1>
+        <h1>Coming Soon</h1>
         <p> Our website and restaurant are currently under construction.</p>
         <p>Stay tuned for updates and our grand opening!</p>
         <p>Contact us at abs@jollourf.com </p>
