--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         }
 
         // Initial call to start the slideshow
-       /** showSlides();
+       showSlides();
     </script>
 </body>
 </html>
